# Calmgram

./: .gitignore  Makefile  README.md  docker-compose.yaml
.github/workflows/: ci.yml  ci_api_client.yml  ci_api_server.yml  ci_ml.yml
ML/: CMakeLists.txt  Makefile  answers.txt  main.cc
ML/Data/inc/: dataset.h  stemmer.hpp  vectorizer.h
ML/Data/src/: dataset.cc  dataset.cpp  vectorizer.cc  vectorizer.cpp
ML/NN/inc/: bfgs.h  classifier.h  gradient_descent.h  nn.h  optimizer.h
ML/NN/src/: bfgs.cpp  classifier.cc  classifier.cpp  gradient_descent.cc  gradient_descent.cpp  nn.cc
ML/files/: coefs.txt  data.txt  idfs.txt  stopwords.txt  vocab.txt
ML/tests/: CMakeLists.txt  tests_data.cc
api_client/: CMakeLists.txt  main.cc
api_client/converters/inc/: add_chat_converter.h  auth_converter.h  get_img_converter.h  send_msg_converter.h  update_chat_converter.h
api_client/converters/src/: add_chat_converter.cc  auth_converter.cc  get_img_converter.cc  send_msg_converter.cc  update_chat_converter.cc
api_client/core/inc/: core.h
api_client/core/src/: core.cc
api_client/entities/inc/: entities.h
api_client/local/inc/: add_chat.h  auth.h  logout.h  report.h  send_msg.h  update_chat.h  update_chats.h
api_client/network/inc/: add_chat_handler.h  auth_handler.h  get_img_handler.h  interfaces_handler.h  interfaces_handlers.h  logout_handler.h  report_handler.h  request_sender.h  send_msg_handler.h  structs.h  update_chat_handler.h  update_chats_handler.h
api_client/network/src/: add_chat_handler.cc  auth_handler.cc  get_img_handler.cc  logout_handler.cc  report_handler.cc  request_sender.cc  send_msg_handler.cc  update_chat_handler.cc  update_chats_handler.cc
api_client/use_case/inc/: interfaces_user_uc.h  user_uc.h
api_client/use_case/src/: user_uc.cc
api_client/user_interface/inc/: calmgram_window.h  signal_sender.h
api_client/user_interface/src/: calmgram_window.cc  calmgram_wndow.cc
api_client/user_interface/ui/: calmgram_wndow.ui
api_server/: CMakeLists.txt  Dockerfile  ML  entrypoint.sh  main.cc  set_env.sh
api_server/controller/inc/: add_chat_handler.h  add_chat_handler.hpp  add_to_dataset_handler.hpp  controller.h  get_chat_list_handler.hpp  interfaces_controller.h  send_msg_handler.h  send_msg_handler.hpp  update_chat_handler.h  update_chat_handler.hpp  user_auth_handler.h  user_auth_handler.hpp  user_logout_handler.hpp
api_server/controller/src/: add_chat_handle.cc  controller.cc  send_msg_handler.cc  update_chat_handler.cc  user_auth_handler.cc
api_server/entities/inc/: entities.h
api_server/entity/: entity.h
api_server/json/inc/: json_parser.h
api_server/libs/boost/json/: json_parser.hpp  json_parser_impl.hpp
api_server/libs/boost/server/inc/: async_http_server.h  listener.h  session.h
api_server/libs/boost/server/src/: async_http_server.cc  listener.cc  session.cc
api_server/libs/database/: initialScript.sql  postgre_sql.cc
api_server/libs/database/inc/: postgre_sql.h
api_server/libs/database/src/: postgre_sql.cc
api_server/router/: add_chat_handler.h  router_handler.h  send_msg_handler.h
api_server/router/inc/: add_chat_handler.h  interfaces_router.h  router_handler.h  send_msg_handler.h  update_chat_handler.h  user_auth_handler.h
api_server/router/src/: add_chat_handle.cc  router_handler.cc  send_msg_handler.cc  update_chat_handler.cc  user_auth_handler.cc
api_server/server/inc/: plugs.h  server_core.h
api_server/server/src/: server_core.cc
api_server/session/inc/: session_controller.h
api_server/session/src/: session_controller.cc
api_server/tests/: CMakeLists.txt  tests.cc  use_case_test.cc  use_case_test.h
api_server/tests/inc/: controller_test.h  use_case_test.h
api_server/tests/src/: controller_test.cc  use_case_test.cc
api_server/use_case/: add_chat_uc.h  interfaces_use_case.h  update_chat_uc.h  use_case_interface.h
api_server/use_case/inc/: add_chat_uc.h  add_to_dataset_uc.h  get_chat_list_uc.h  interfaces_uc_input.h  interfaces_uc_output.h  interfaces_use_case.h  list_chat_uc.h  send_msg_uc.h  update_chat_uc.h  user_auth_uc.h  user_logout_uc.h
api_server/use_case/src/: add_chat_uc.cc  add_to_dataset_uc.cc  get_chat_list_uc.cc  list_chat_uc.cc  send_msg_uc.cc  update_chat_uc.cc  user_auth_uc.cc  user_logout_uc.cc
doc/: Async.md  CI.md  Diagram.drawio  README.md  Review_GoToChat.md  SUMMARY.md  Ревью проекта Любского.txt
doc/diagrams/: Project.drawio  Server.drawio  UML_ApiServer.drawio
tests/: tests_data.cc
